    - Use the binary targets to get dependencies, use go install
      to build them into local gopath/bin. Simplifies Makefile.
  * mgo/worker.go, pq/worker.go, responses.go, server.go, templates.go,
    worker.go, www/templates/header.tmpl:
    - Create form to add pasted key armor. LP: #1076841
    - /pks/add produces an HTML page confirming added key fingerprints.
    - Clean up ws, cruft.

 -- Casey Marshall <casey.marshall@gazzang.com>  Tue, 13 Nov 2012 20:57:18 -0600

hockeypuck (0.5) precise; urgency=low

  [ Casey Marshall ]
  * cmd/hockeypuck/main.go, debian/control, errors.go, mgo/worker.go,
    mgo/worker_test.go, pq/worker.go, pq/worker_test.go, === removed
    directory pq, types.go,
    mgo/merge.go, mgo/rw.go, mgo/types.go:
    - Significant progress on mongo worker.
    - Removed postgres worker.
    - op=index, op=vindex support.
    - Split packages into smaller source files.
  * cmd/hockeypuck/main.go, mgo/worker.go:
    - Add -load option to hockeypuck main.
  * cmd/hockeypuck/main.go, mgo/rw.go, mgo/worker.go:
    - Add some simple logging. LP: #1040376
    - Skip unsupported public key and signature packets. This allows loading
      subsequent supported keys from the packet stream.
    - Skip signatures with nil IssuerKeyId (wat). LP: #1044772
  * debian/control, debian/rules, Makefile:
  * === added directory man, === added directory man/man1,
    debian/control, debian/rules, Makefile, man/man1/hockeypuck.1:
    - Add manpage. Trying to fix recommends in control file.
    - Makefile now cleans the binary before making source package, to
      make sure the PPA builder recompiles it.
    - Add Makefile srcclean target.
  * hkp_types.go, merge.go, mgo/merge.go, mgo/rw.go, mgo/types.go,
    mgo/worker.go, mgo/worker_test.go, pgp.go, pgp_types.go, types.go:
    - Refactoring: pull non-Mongo-specific code up to top-level hockeypuck
      package.
  * mgo/worker.go:
    - Minimum viable machine readable search output.